--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,40 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+.scrollbar-hide::-webkit-scrollbar {
+    display: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.scrollbar-hide {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+.blog-content {
+    padding: 36px 0;
+}
+
+.blog-content b{
+    margin-bottom: 10px;
+    font-weight:  500;
+}
+
+.blog-content p{
+    margin-bottom: 10px;
+}
+
+.blog-content h1{
+    margin-bottom: 10px;
+    font-weight:  600;
+    font-size: 26px;
+}
+.blog-content h2{
+    margin-bottom: 10px;
+    font-weight:  500;
+    font-size: 22px;
+}
+.blog-content h3{
+    margin-bottom: 10px;
+    font-weight:  500;
+    font-size: 18px;
 }
